# gemini-chabot-with-voice

./: .gitignore  README.md  app.py  pyproject.toml
sample/: sample1.py  sample2.py  sample3.py
